# eda-alliance-verilog-synthesis

./: .gitattributes  .gitignore
alliance/src/: README.win32
alliance/src/distrib/cd-root/: Readme.html  autorun.inf
alliance/src/documentation/alliance-examples/mipsR3000/asm/: add000.u  add001.u  add002.u  add003.u  add004.u  add005.u  addu000.u  addu001.u  addu002.u  addu003.u  and000.u  and001.u  break_00.e  break_00.u  exc000.e  exc000.u  exc001.e  exc001.u  exc002.e  exc002.u  exc003.e  exc003.u  exc004.e  exc004.u  exc005.e  exc005.u  exc006.e  exc006.u  exc007.e  (+114 more)
alliance/src/vlog2vbe/: .gitignore  Makefile.am  README.md  configure.in
alliance/src/vlog2vbe/man1/: Makefile.am  vlog2vbe.1
alliance/src/vlog2vbe/src/: Makefile.am  vlog_ast.c  vlog_ast.h  vlog_elab.c  vlog_elab.h  vlog_emit.c  vlog_emit.h  vlog_main.c  vlog_parse.c  vlog_parse.h
alliance/src/vlog2vbe/tests/: Makefile
alliance/src/vlog2vbe/tests/comb/: always_default.v  always_mux.v  arithmetic.v  case_decoder.v  div_mod_signed_tristate.v  mux2.v  simple_and.v  vector_ops.v
alliance/src/vlog2vbe/tests/expected/: always_default.vbe  always_mux.vbe  arithmetic.vbe  case_decoder.vbe  dff.vbe  dff_async_reset.vbe  dff_en.vbe  div_mod_signed_tristate.vbe  generate_for.vbe  generate_if_case.vbe  mux2.vbe  named_two_level.vbe  nested_modules.vbe  parameterized.vbe  positional_chain.vbe  seq_instance.vbe  simple_and.vbe  vector_ops.vbe
alliance/src/vlog2vbe/tests/hier/: generate_for.v  generate_if_case.v  named_two_level.v  nested_modules.v  parameterized.v  positional_chain.v  seq_instance.v
alliance/src/vlog2vbe/tests/seq/: dff.v  dff_async_reset.v  dff_en.v
docs/: DESIGN_HISTORY.md  EXTENDED_ALLIANCE_INSTALL_TEST_GUIDE.md  PROJECT_ARCHITECTURE.md  VERILOG_ALLIANCE_EXPERIMENT_GUIDE.md  VERILOG_SYNTHESIS_PLAN.md  WSL_HEADLESS_VERILOG_TEST_GUIDE.md  开发历程完整报告.md  补充说明.md
(+9 files in other folders)
