SUBDIRS = src man1

EXTRA_DIST = \
	README.md \
	tests/Makefile \
	tests/comb/simple_and.v \
	tests/comb/mux2.v \
	tests/comb/vector_ops.v \
	tests/comb/always_mux.v \
	tests/comb/always_default.v \
	tests/comb/case_decoder.v \
	tests/seq/dff.v \
	tests/seq/dff_en.v \
	tests/seq/dff_async_reset.v \
	tests/expected/simple_and.vbe \
	tests/expected/always_mux.vbe \
	tests/expected/always_default.vbe \
	tests/expected/dff.vbe \
	tests/expected/dff_en.vbe \
	tests/expected/dff_async_reset.vbe
