SUBDIRS = src man1

EXTRA_DIST = \
	README.md \
	tests/Makefile \
	tests/comb/simple_and.v \
	tests/comb/mux2.v \
	tests/comb/vector_ops.v \
	tests/comb/arithmetic.v \
	tests/comb/div_mod_signed_tristate.v \
	tests/comb/always_mux.v \
	tests/comb/always_default.v \
	tests/comb/case_decoder.v \
	tests/seq/dff.v \
	tests/seq/dff_en.v \
	tests/seq/dff_async_reset.v \
	tests/hier/named_two_level.v \
	tests/hier/positional_chain.v \
	tests/hier/seq_instance.v \
	tests/hier/nested_modules.v \
	tests/hier/parameterized.v \
	tests/hier/generate_for.v \
	tests/hier/generate_if_case.v \
	tests/expected/simple_and.vbe \
	tests/expected/mux2.vbe \
	tests/expected/vector_ops.vbe \
	tests/expected/arithmetic.vbe \
	tests/expected/div_mod_signed_tristate.vbe \
	tests/expected/always_mux.vbe \
	tests/expected/always_default.vbe \
	tests/expected/case_decoder.vbe \
	tests/expected/dff.vbe \
	tests/expected/dff_en.vbe \
	tests/expected/dff_async_reset.vbe \
	tests/expected/named_two_level.vbe \
	tests/expected/positional_chain.vbe \
	tests/expected/seq_instance.vbe \
	tests/expected/nested_modules.vbe \
	tests/expected/parameterized.vbe \
	tests/expected/generate_for.vbe \
	tests/expected/generate_if_case.vbe
